# PPP

./: .gitignore  CMakeLists.txt  PPP.sln  std_lib_facilities.h
Chapter01/hello_world/: hello_world.vcxproj  hello_world.vcxproj.filters
Chapter02/first_name/: first_name.cpp  first_name.vcxproj  first_name.vcxproj.filters
Chapter02/name_and_age/: name_and_age.cpp  (+2 more)
PPP/: CMakeLists.txt  PPP.cpp  PPP.h  PPP.vcxproj  PPP.vcxproj.filters
PPP/Chapter01/: hello_world.cpp
PPP/x64/Debug/: PPP.exe.recipe  PPP.ilk  vc143.idb
PPP/x64/Debug/PPP.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.secondary.1.tlog
Part01/: CMakeLists.txt
Part01/Chapter03/: CMakeLists.txt  compare_names.cpp  first_and_second.cpp  first_name.cpp  name_age.cpp  name_and_age.cpp  operator_exercise.cpp  operators_exercise.cpp  repeated_words.cpp  unsafe_conversions.cpp
compare_names/: compare_names.cpp  compare_names.vcxproj  compare_names.vcxproj.filters
exercie_operators/: exercie_operators.vcxproj  exercie_operators.vcxproj.filters  exercise_operators.cpp
first_name/: first_name.cpp  first_name.vcxproj  first_name.vcxproj.filters
hello_world/: hello_world.cpp  hello_world.vcxproj
name_age/: name_age.cpp  name_age.vcxproj  name_age.vcxproj.filters
read_names/: read_names.cpp  read_names.vcxproj  read_names.vcxproj.filters
repeated_words/: repeated_words.cpp  repeated_words.vcxproj  repeated_words.vcxproj.filters
unsafe_conversions/: unsafe_conversions.cpp  unsafe_conversions.vcxproj  unsafe_conversions.vcxproj.filters
(+30 files in other folders)
