add_executable(first_name.exe first_name.cpp)
add_executable(name_age.exe name_age.cpp)
add_executable(operators_exercise.exe operators_exercise.cpp)
add_executable(first_and_second.exe first_and_second.cpp)
add_executable(compare_names.exe compare_names.cpp)
add_executable(repeated_words.exe repeated_words.cpp)